--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body {
     background-color: white;
     grid-column: 4 / span 9;
     grid-row: 1 / span 2;
+    padding: 0 0 20px 10px;
 }
 
 #header-top {
@@ -58,7 +59,7 @@ body {
 }
 
 #header-top input {
-    width: 40vh;
+    width: 40vw;
     height: 40px;
     border-radius: 30px;
     border: none;
@@ -72,21 +73,33 @@ body {
     align-items: center;
 }
 
+#header-top img {
+    transform: scale(0.5);
+}
+
+#profile-picture img {
+    transform: scale(0.8);
+}
+
+
 #search-bar {
     background-color: lightgrey;
 }
 
 #user-info-section {
     display: flex;
-    justify-content: space-evenly;
-    width: 50%;
+    justify-content: center;
+    width: 30%;
 }
-
 
 #header-bottom {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+#user-greeting {
+    gap: 10px;
 }
 
 #header-bottom > div {
@@ -96,18 +109,19 @@ body {
 #user-upload {
     justify-content: space-evenly;
     align-items: center;
-    width: 50%;
+    width: 40%;
 }
 
 #user-upload > button {
     display: flex;
     background-color: rgb(68, 68, 222);
-    height: 40px;
-    width: 30%;
-    padding: 20px;
+    height: 25px;
+    width: 20%;
+    padding: 15px;
     align-items: center;
     justify-content: center;
     border-radius: 30px;
+    color: white;
 }
 
 #notification-icon img {
